// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PillButton> component in active and open state should render correctly 1`] = `
<PillButton
  isOpen={true}
  label="This pill is in use"
  name="Pill name"
  onClear={[MockFunction]}
  togglePopup={[MockFunction]}
>
  <div
    className="PillButton"
    onClick={[MockFunction]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="PillButton__label"
    >
      Pill name
    </div>
    <div
      className="PillButton__pill PillButton__pill--isActive PillButton__pill--isOpen"
    >
      <span>
        This pill is in use
      </span>
      <button
        className="PillButton__button PillButton__button--isActive PillButton__button--isOpen"
        onClick={null}
        type="button"
      >
        <IoIosArrowUp>
          <IconBase
            attr={
              Object {
                "viewBox": "0 0 512 512",
              }
            }
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 217.9L383 345c9.4 9.4 24.6 9.4 33.9 0 9.4-9.4 9.3-24.6 0-34L273 167c-9.1-9.1-23.7-9.3-33.1-.7L95 310.9c-4.7 4.7-7 10.9-7 17s2.3 12.3 7 17c9.4 9.4 24.6 9.4 33.9 0l127.1-127z"
                key="0"
              />
            </svg>
          </IconBase>
        </IoIosArrowUp>
      </button>
    </div>
  </div>
</PillButton>
`;

exports[`<PillButton> component in active state (with label prop defined) should render correctly 1`] = `
<PillButton
  isOpen={false}
  label="This pill is in use"
  name="Pill name"
  onClear={[MockFunction]}
  togglePopup={[MockFunction]}
>
  <div
    className="PillButton"
    onClick={[MockFunction]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="PillButton__label"
    >
      Pill name
    </div>
    <div
      className="PillButton__pill PillButton__pill--isActive"
    >
      <span>
        This pill is in use
      </span>
      <button
        className="PillButton__button PillButton__button--isActive"
        onClick={[Function]}
        type="button"
      >
        ×
      </button>
    </div>
  </div>
</PillButton>
`;

exports[`<PillButton> component in open state should render correctly 1`] = `
<PillButton
  isOpen={true}
  label={null}
  name="Pill name"
  onClear={[MockFunction]}
  togglePopup={[MockFunction]}
>
  <div
    className="PillButton"
    onClick={[MockFunction]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="PillButton__label"
    />
    <div
      className="PillButton__pill PillButton__pill--isOpen"
    >
      <span>
        Pill name
      </span>
      <button
        className="PillButton__button PillButton__button--isOpen"
        onClick={null}
        type="button"
      >
        <IoIosArrowUp>
          <IconBase
            attr={
              Object {
                "viewBox": "0 0 512 512",
              }
            }
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 217.9L383 345c9.4 9.4 24.6 9.4 33.9 0 9.4-9.4 9.3-24.6 0-34L273 167c-9.1-9.1-23.7-9.3-33.1-.7L95 310.9c-4.7 4.7-7 10.9-7 17s2.3 12.3 7 17c9.4 9.4 24.6 9.4 33.9 0l127.1-127z"
                key="0"
              />
            </svg>
          </IconBase>
        </IoIosArrowUp>
      </button>
    </div>
  </div>
</PillButton>
`;

exports[`<PillButton> component with minimal props should render correctly 1`] = `
<PillButton
  isOpen={false}
  label={null}
  name="Pill name"
  onClear={[MockFunction]}
  togglePopup={[MockFunction]}
>
  <div
    className="PillButton"
    onClick={[MockFunction]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="PillButton__label"
    />
    <div
      className="PillButton__pill"
    >
      <span>
        Pill name
      </span>
      <button
        className="PillButton__button"
        onClick={null}
        type="button"
      >
        <IoIosArrowDown>
          <IconBase
            attr={
              Object {
                "viewBox": "0 0 512 512",
              }
            }
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 294.1L383 167c9.4-9.4 24.6-9.4 33.9 0s9.3 24.6 0 34L273 345c-9.1 9.1-23.7 9.3-33.1.7L95 201.1c-4.7-4.7-7-10.9-7-17s2.3-12.3 7-17c9.4-9.4 24.6-9.4 33.9 0l127.1 127z"
                key="0"
              />
            </svg>
          </IconBase>
        </IoIosArrowDown>
      </button>
    </div>
  </div>
</PillButton>
`;
